--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1123,11 +1123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = x_values\n",
+    "text_values = [x_values[0],x_values[1],x_values[2]]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
